--- a/Blood App/app/src/main/res/layout/fragment_create_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_create_profile.xml
@@ -15,13 +15,13 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:alpha="1"
-        android:background="@drawable/theme_filled_btn"
+        android:background="@color/red_500"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:text="Next"
-        android:textColor="@color/Dark"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
             android:layout_marginStart="32dp"
             android:fontFamily="@font/poppinssemibold"
             android:text="Create Profile"
-            android:textColor="@color/Font"
+            android:textColor="@color/Text"
             android:textSize="30sp" />
 
         <TextView
@@ -58,7 +58,7 @@
             android:layout_marginBottom="48dp"
             android:fontFamily="@font/poppinsregular"
             android:text="Use your orginal name so that your colleagues can find you"
-            android:textColor="@color/Hint"
+            android:textColor="@color/hint"
             android:textSize="16sp" />
 
         <EditText
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/secondary_outline_btn"
+            android:background="@drawable/primary_outline_textbox"
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:drawablePadding="8dp"
             android:ems="10"
@@ -78,8 +78,8 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
-            android:textColor="@color/Font"
-            android:textColorHint="@color/Hint"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
         <TextView
@@ -89,7 +89,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/secondary_outline_btn"
+            android:background="@drawable/primary_outline_textbox"
             android:drawableLeft="@drawable/ic_baseline_place_24"
             android:drawablePadding="8dp"
             android:focusableInTouchMode="false"
@@ -99,52 +99,8 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
-            android:textColor="@color/Font"
-            android:textColorHint="@color/Hint"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/EditFacebook"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/secondary_outline_btn"
-            android:drawableLeft="@drawable/ic_baseline_facebook_24_sec"
-            android:drawablePadding="8dp"
-            android:ems="10"
-            android:fontFamily="@font/poppinsregular"
-            android:hint="Facebook "
-            android:inputType="textPersonName"
-            android:paddingStart="16dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="12dp"
-            android:textColor="@color/Font"
-            android:textColorHint="@color/Hint"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/EditInsta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/secondary_outline_btn"
-            android:drawableLeft="@drawable/ic_instagram_sec"
-            android:drawablePadding="8dp"
-            android:ems="10"
-            android:fontFamily="@font/poppinsregular"
-            android:hint="Instagram "
-            android:inputType="textPersonName"
-            android:paddingStart="16dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="12dp"
-            android:textColor="@color/Font"
-            android:textColorHint="@color/Hint"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
         <EditText
@@ -154,7 +110,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/secondary_outline_btn"
+            android:background="@drawable/primary_outline_textbox"
             android:drawableLeft="@drawable/ic_baseline_sports_esports_24"
             android:drawablePadding="8dp"
             android:ems="10"
@@ -166,8 +122,8 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
-            android:textColor="@color/Font"
-            android:textColorHint="@color/Hint"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
     </LinearLayout>
