--- a/Blood App/app/src/main/res/layout/fragment_login.xml
+++ b/Blood App/app/src/main/res/layout/fragment_login.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:fontFamily="@font/poppinsregular"
+            android:textColor="@color/Text"
             android:text="Already have an account? Click Here"
             android:textSize="16sp" />
 
