--- a/Blood App/app/src/main/res/layout/fragment_signup.xml
+++ b/Blood App/app/src/main/res/layout/fragment_signup.xml
@@ -36,7 +36,27 @@
             android:text="Already have an account? Click Here"
             android:textColor="@color/hint"
             android:textSize="16sp" />
-
+        <EditText
+            android:id="@+id/editUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Name"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="16dp"
+            android:paddingTop="12dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/GreyPrimary"
+            android:textSize="16sp" />
         <EditText
             android:id="@+id/editEmailSignup"
             android:layout_width="match_parent"
