--- a/Blood App/app/src/main/res/layout/fragment_create_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_create_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Login.createProfileFragment">
+    tools:context=".ui.login.CreateProfileFragment">
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -72,7 +72,7 @@
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Name*"
+            android:hint="Age"
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
@@ -94,30 +94,7 @@
             android:drawablePadding="8dp"
             android:focusableInTouchMode="false"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Organisation*"
-            android:paddingStart="16dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="12dp"
-            android:textColor="@color/Text"
-            android:textColorHint="@color/hint"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/EditInterest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/primary_outline_textbox"
-            android:drawableLeft="@drawable/ic_baseline_sports_esports_24"
-            android:drawablePadding="8dp"
-            android:ems="10"
-            android:focusableInTouchMode="false"
-            android:fontFamily="@font/poppinsregular"
-            android:hint="Interest"
-            android:inputType="textPersonName"
+            android:hint="Location"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
