--- a/Blood App/app/src/main/res/layout/fragment_login.xml
+++ b/Blood App/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".UI.Login.loginFragment">
+    tools:context=".ui.login.LoginFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout14"
@@ -25,6 +25,7 @@
             android:layout_marginStart="32dp"
             android:fontFamily="@font/poppinssemibold"
             android:text="Login"
+            android:textColor="@color/Text"
             android:textSize="36sp" />
 
         <TextView
@@ -55,7 +56,8 @@
             android:paddingTop="12dp"
             android:paddingRight="16dp"
             android:paddingBottom="10dp"
-            android:textColorHint="@color/GreyPrimary"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
         <EditText
@@ -76,7 +78,8 @@
             android:paddingTop="12dp"
             android:paddingRight="16dp"
             android:paddingBottom="12dp"
-            android:textColorHint="@color/GreyPrimary"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
             android:textSize="16sp" />
 
         <TextView
@@ -91,30 +94,7 @@
             android:textColor="@color/greySecondary"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/textView48"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="or"
-            android:textAlignment="center"
-            android:textSize="18sp" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/GoogleSignUpLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="48dp"
-            android:background="@color/GreyPrimary"
-            android:drawableLeft="@drawable/ic_icons8_google"
-            android:paddingStart="32dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="32dp"
-            android:paddingBottom="8dp"
-            android:text="Countinue with Google"
-            android:textAllCaps="false" />
 
     </LinearLayout>
 
@@ -146,6 +126,7 @@
         android:layout_height="32dp"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
+        android:theme="@style/ProgressBarStyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />
 </androidx.constraintlayout.widget.ConstraintLayout>
