--- a/Blood App/app/src/main/res/layout/fragment_login_home.xml
+++ b/Blood App/app/src/main/res/layout/fragment_login_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".UI.Login.loginHomeFragment">
+    tools:context=".ui.login.LoginHomeFragment">
 
 
     <Button
@@ -16,7 +16,6 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:alpha="1"
-
         android:background="@color/red_500"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
@@ -24,6 +23,7 @@
         android:paddingBottom="16dp"
         android:text="Sign up"
         android:textSize="14sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/LoginTextHome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,6 +52,7 @@
         android:fontFamily="@font/poppinsmedium"
         android:lineSpacingExtra="-8sp"
         android:text="Let's Get \nStarted"
+        android:textColor="@color/Text"
         android:textSize="42sp"
         app:layout_constraintBottom_toTopOf="@+id/textView42"
         app:layout_constraintStart_toStartOf="parent" />
@@ -63,7 +64,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/poppinsregular"
-        android:text="Bringing people closer than ever"
+        android:textColor="@color/Text"
+        android:text="Help people in need"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/SignUpBtn"
         app:layout_constraintStart_toStartOf="parent" />
@@ -77,6 +79,7 @@
         android:text="Already have an account? Click Here"
         android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/Text"
         app:layout_constraintEnd_toEndOf="parent" />
 
 
