--- a/Blood App/app/src/main/res/values/colors.xml
+++ b/Blood App/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="red_500">#ED394A</color>
     <color name="GreyPrimary">#B6B6B6</color>
     <color name="greySecondary">#272727</color>
-    <color name="hint">#272727</color>
+    <color name="hint">#B6B6B6</color>
     <color name="Text">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FEF6F6</color>
