create profile xml

--- a/Blood App/app/src/main/res/layout/fragment_create_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_create_profile.xml
@@ -57,22 +57,22 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="48dp"
             android:fontFamily="@font/poppinsregular"
-            android:text="Use your orginal name so that your colleagues can find you"
+            android:text="Use your orginal credentials"
             android:textColor="@color/hint"
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/EditName"
+            android:id="@+id/EditBloodGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/primary_outline_textbox"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawableLeft="@drawable/ic_baseline_bloodtype_24"
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Age"
+            android:hint="Blood Group"
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
@@ -83,7 +83,76 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/EditOrg"
+            android:id="@+id/EditDOB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawableLeft="@drawable/ic_baseline_date_range_24"
+            android:drawablePadding="8dp"
+            android:focusableInTouchMode="false"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Date of Birth"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/EditGender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/primary_outline_textbox"
+                android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
+                android:drawablePadding="8dp"
+                android:focusableInTouchMode="false"
+                android:fontFamily="@font/poppinsregular"
+                android:hint="Gender"
+                android:paddingStart="16dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="12dp"
+                android:textColor="@color/Text"
+                android:textColorHint="@color/hint"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/EditWeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/primary_outline_textbox"
+                android:drawableLeft="@drawable/ic_baseline_line_weight_24"
+                android:drawablePadding="8dp"
+                android:focusableInTouchMode="false"
+                android:fontFamily="@font/poppinsregular"
+                android:hint="Weight"
+                android:paddingStart="16dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="12dp"
+                android:textColor="@color/Text"
+                android:textColorHint="@color/hint"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/EditLocationState"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -94,7 +163,47 @@
             android:drawablePadding="8dp"
             android:focusableInTouchMode="false"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Location"
+            android:hint="State"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/EditLocationDist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawableLeft="@drawable/ic_baseline_place_24"
+            android:drawablePadding="8dp"
+            android:focusableInTouchMode="false"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="District"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/EditPastRecord"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawableLeft="@drawable/ic_baseline_content_paste_24"
+            android:drawablePadding="8dp"
+            android:focusableInTouchMode="false"
+            android:fontFamily="@font/poppinsregular"
+            android:hint="Past Record"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
