--- a/Blood App/app/src/main/res/layout/fragment_create_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_create_profile.xml
@@ -111,7 +111,6 @@
                 android:background="@drawable/primary_outline_textbox"
                 android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
                 android:drawablePadding="8dp"
-                android:focusableInTouchMode="false"
                 android:fontFamily="@font/poppinsregular"
                 android:hint="Gender"
                 android:paddingStart="16dp"
@@ -132,16 +131,17 @@
                 android:background="@drawable/primary_outline_textbox"
                 android:drawableLeft="@drawable/ic_baseline_line_weight_24"
                 android:drawablePadding="8dp"
-                android:focusableInTouchMode="false"
                 android:fontFamily="@font/poppinsregular"
                 android:hint="Weight"
                 android:paddingStart="16dp"
                 android:paddingTop="12dp"
                 android:paddingEnd="16dp"
                 android:paddingBottom="12dp"
+                android:inputType="number"
                 android:textColor="@color/Text"
                 android:textColorHint="@color/hint"
                 android:textSize="16sp" />
+
         </LinearLayout>
 
         <Spinner
