--- a/Blood App/app/src/main/res/values/styles.xml
+++ b/Blood App/app/src/main/res/values/styles.xml
@@ -9,6 +9,12 @@
         <item name="android:windowBackground">@color/background</item>
         <item name="android:colorBackground">@color/background</item>
     </style>
+    
+    <style name="MaterialTheme" parent="Theme.MaterialComponents">
+        <item name="colorPrimary">@color/red_500</item>
+        <item name="colorPrimaryDark">@color/background</item>
+        <item name="colorAccent">@color/red_500</item>
+    </style>
 
     <style name="ProgressBarStyle">
         <item name="colorAccent">@color/red_500</item>
