--- a/Blood App/app/src/main/res/values/styles.xml
+++ b/Blood App/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorPrimary">@color/red_500</item>
         <item name="colorPrimaryDark">@color/background</item>
         <item name="colorAccent">@color/red_500</item>
+        <item name="textFillColor">@color/Text</item>
     </style>
 
     <style name="ProgressBarStyle">
