--- a/Blood App/app/src/main/res/layout/fragment_create_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_create_profile.xml
@@ -140,7 +140,7 @@
             android:backgroundTint="@color/Text"
             android:drawableLeft="@drawable/ic_baseline_place_24" />
 
-        <EditText
+        <TextView
             android:id="@+id/EditPastRecord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -150,6 +150,7 @@
             android:background="@drawable/primary_outline_textbox"
             android:drawableLeft="@drawable/ic_baseline_content_paste_24"
             android:drawablePadding="8dp"
+            android:focusableInTouchMode="false"
             android:fontFamily="@font/poppinsregular"
             android:hint="Past Record"
             android:paddingStart="16dp"
@@ -159,13 +160,14 @@
             android:textColor="@color/Text"
             android:textColorHint="@color/hint"
             android:textSize="16sp" />
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCreate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="32dp"
             android:alpha="1"
             android:background="@color/red_500"
@@ -174,6 +176,7 @@
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
             android:text="Next"
+            android:layout_marginTop="24dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
