--- a/Blood App/app/src/main/res/layout/fragment_request.xml
+++ b/Blood App/app/src/main/res/layout/fragment_request.xml
@@ -1,14 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.RequestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+
+
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppinssemibold"
+            android:text="Emergency Blood Request"
+            android:textColor="@color/red_500"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppinsregular"
+            android:text="Select Your Blood Group"
+            android:textColor="@color/Text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+
+        <GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:columnCount="4"
+            android:rowCount="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="A+"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="AB+"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="A-"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="AB-"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="B+"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="B-"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="O+"
+                android:textColor="@color/Text"></Button>
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_row="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="5sp"
+                android:background="@drawable/primary_outline_textbox"
+                android:fontFamily="@font/poppinsregular"
+                android:text="O-"
+                android:textColor="@color/Text"></Button>
+
+
+        </GridLayout>
+
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/poppinsregular"
+            android:text="How many units needed"
+            android:textColor="@color/Text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+
+        <EditText
+            android:id="@+id/EditQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/poppinsregular"
+            android:inputType="number"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/poppinsregular"
+            android:text="Hospital Location and name"
+            android:textColor="@color/Text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/EditQuantity" />
+
+        <EditText
+            android:id="@+id/EditLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/primary_outline_textbox"
+            android:drawablePadding="8dp"
+            android:fontFamily="@font/poppinsregular"
+            android:inputType="number"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="12dp"
+            android:textColor="@color/Text"
+            android:textColorHint="@color/hint"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+
+
+
+
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
