--- a/Blood App/app/src/main/res/layout/fragment_request.xml
+++ b/Blood App/app/src/main/res/layout/fragment_request.xml
@@ -12,10 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="40dp"
         android:alpha="1"
-        android:background="@color/red_500"
+        android:background="@drawable/primary_color_filled"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
         android:paddingTop="16dp"
@@ -23,10 +23,10 @@
         android:text="NEXT"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_information" />
 
     <TextView
         android:id="@+id/textView"
