--- a/Blood App/app/src/main/res/layout/fragment_request.xml
+++ b/Blood App/app/src/main/res/layout/fragment_request.xml
@@ -216,6 +216,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
+
+    <TextView
+        android:id="@+id/verifiy_file"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/primary_outline_textbox"
+        android:drawableLeft="@drawable/ic_baseline_content_paste_24"
+        android:drawablePadding="8dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="@font/poppinsregular"
+        android:hint="Upload Valid document "
+        android:paddingStart="16dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="12dp"
+        android:textColor="@color/Text"
+        android:textColorHint="@color/hint"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EditQuantity" />
+
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -226,34 +251,33 @@
             android:text="Additional Information (optional)"
             android:textColor="@color/Text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/EditQuantity" />
+            app:layout_constraintTop_toBottomOf="@+id/verifiy_file" />
 
-        <EditText
-            android:id="@+id/edit_information"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/primary_grey_outline"
-            android:drawablePadding="8dp"
-            android:fontFamily="@font/poppinsregular"
-            android:gravity="start"
-            android:hint="Any information that we should consider"
-            android:inputType="textMultiLine"
-            android:lines="3"
-            android:nestedScrollingEnabled="true"
-            android:paddingStart="16dp"
-            android:paddingTop="12dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="12dp"
-            android:singleLine="false"
-            android:textColor="@color/Text"
-            android:textColorHint="@color/hint"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+    <EditText
+        android:id="@+id/edit_information"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/primary_grey_outline"
+        android:drawablePadding="8dp"
+        android:fontFamily="@font/poppinsregular"
+        android:gravity="start"
+        android:hint="Any information that we should consider"
+        android:inputType="textMultiLine"
+        android:lines="3"
+        android:nestedScrollingEnabled="true"
+        android:paddingStart="16dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="12dp"
+        android:singleLine="false"
+        android:textColor="@color/Text"
+        android:textColorHint="@color/hint"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
