--- a/Blood App/app/src/main/res/layout/blood_request_card.xml
+++ b/Blood App/app/src/main/res/layout/blood_request_card.xml
@@ -2,28 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="4dp"
-        app:cardCornerRadius="8dp"
         android:background="@drawable/primary_grey_filled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
             android:background="@drawable/primary_grey_filled"
             android:orientation="vertical"
             android:padding="4dp">
@@ -46,9 +41,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
+                        android:layout_marginStart="4dp"
                         android:fontFamily="@font/poppinsregular"
                         android:text="Darpan Mittal"
-                        android:textColor="@color/Text"/>
+                        android:textColor="@color/Text" />
 
 
                 </LinearLayout>
@@ -91,7 +87,8 @@
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/poppinsregular"
                         android:text=" 12 Units"
-                        android:textColor="@color/red_500"/>
+                        android:layout_marginStart="4dp"
+                        android:textColor="@color/red_500" />
 
 
                 </LinearLayout>
@@ -107,12 +104,12 @@
                         android:id="@+id/request_card_blood_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/poppinsregular"
-                        android:layout_gravity="right"
-                        android:layout_alignParentRight="true"
                         android:text=" AB+"
-                        android:textColor="@color/red_500"/>
+                        android:textColor="@color/red_500" />
                 </LinearLayout>
 
             </LinearLayout>
