Pick Contact for requesting blood

--- a/Blood App/app/src/main/res/layout/fragment_request.xml
+++ b/Blood App/app/src/main/res/layout/fragment_request.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:alpha="1"
         android:background="@drawable/primary_color_filled"
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_information" />
+        app:layout_constraintTop_toBottomOf="@+id/phone_no" />
 
     <TextView
         android:id="@+id/textView"
@@ -218,7 +218,7 @@
 
 
     <TextView
-        android:id="@+id/verifiy_file"
+        android:id="@+id/verify_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -251,7 +251,7 @@
             android:text="Additional Information (optional)"
             android:textColor="@color/Text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/verifiy_file" />
+            app:layout_constraintTop_toBottomOf="@+id/verify_file" />
 
     <EditText
         android:id="@+id/edit_information"
@@ -278,6 +278,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/phone_no"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/primary_grey_outline"
+        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
+        android:drawablePadding="8dp"
+        android:focusableInTouchMode="false"
+        android:fontFamily="@font/poppinsregular"
+        android:hint="Contact no of Care giver"
+        android:paddingStart="16dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="12dp"
+        android:textColor="@color/Text"
+        android:textColorHint="@color/hint"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_information" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
