--- a/Blood App/app/src/main/res/layout/fragment_profile.xml
+++ b/Blood App/app/src/main/res/layout/fragment_profile.xml
@@ -152,6 +152,32 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
+
+            <LinearLayout
+                android:id="@+id/settings_admin_request"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/primary_grey_filled"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp"
+                android:padding="12dp">
+
+                <ImageView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_admin_panel_settings_24" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="  Admin 1 hue hue"
+                    android:textColor="@color/Text"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
