--- a/Blood App/app/src/main/res/layout/dialog_error_404.xml
+++ b/Blood App/app/src/main/res/layout/dialog_error_404.xml
@@ -26,7 +26,7 @@
         android:gravity="center_horizontal"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="Go to home"
+        android:text="Dismiss"
         android:textColor="@color/white"
         android:textSize="14sp" />
 
