--- a/Blood App/app/src/main/res/layout/fragment_home.xml
+++ b/Blood App/app/src/main/res/layout/fragment_home.xml
@@ -171,7 +171,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppinsmedium"
-        android:text="Anant Shukla"
+        android:text="Darpan Mittal"
         android:textColor="@color/Text"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
